--- a/index.html
+++ b/index.html
@@ -17,31 +17,43 @@
     <header class="page-header">
       <div class="container page-header__container">
         <a href="./index.html" class="page-header__link" lang="en"><span class="page-header__logo page-header__logo--accent">Web</span>Studio</a>
-        <nav class="site-nav__nav">
-          <ul class="site-nav__list">
-            <li class="site-nav__item"><a class="site-nav__link site-nav__link--active" href="./index.html">Студия</a></li>
-            <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфолио</a></li>
-            <li class="site-nav__item"><a class="site-nav__link" href="#">Контакты</a></li>
-          </ul>
-        </nav>
-        <ul class="contact__list">
-          <li class="contact__item">
-            <a class="contact__link" href="mailto:info@devstudio.com">
-              <svg class="contact__icon" width="16" height="12">
-                <use href="./images/icon.svg#mail"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="contact__item">
-            <a class="contact__link" href="tel:+380961111111">
-              <svg class="contact__icon" width="10" height="16">
-                <use href="./images/icon.svg#smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <button type="button" class="menu__button" data-menu-button>
+          <svg class="menu__icon" width="40" height="40" aria-label="Переключатель мобильного меню">
+            <use class="icon__menu" href="./images/icon.svg#menu"></use>
+            <use class="icon__cross" href="./images/icon.svg#cross"></use>
+          </svg>
+        </button>
+        <div class="menu" data-menu >
+          <div class="navigation">
+            <nav class="site-nav__nav">
+              <ul class="site-nav__list">
+                <li class="site-nav__item"><a class="site-nav__link site-nav__link--active" href="./index.html">Студия</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфолио</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="#">Контакты</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="contact">
+            <ul class="contact__list">
+              <li class="contact__item">
+                <a class="contact__link" href="mailto:info@devstudio.com">
+                  <svg class="contact__icon" width="16" height="12">
+                    <use href="./images/icon.svg#mail"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="contact__item">
+                <a class="contact__link" href="tel:+380961111111">
+                  <svg class="contact__icon" width="10" height="16">
+                    <use href="./images/icon.svg#smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -522,5 +534,6 @@
       </div>
     </footer>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobil-menu.js"></script>
   </body>
 </html>
