--- a/index.html
+++ b/index.html
@@ -44,13 +44,21 @@
                 >
               </li>
               <li class="contact__item">
-                <a class="contact__link" href="tel:+380961111111">
+                <a class="contact__link contact__link--active" href="tel:+380961111111">
                   <svg class="contact__icon" width="10" height="16">
                     <use href="./images/icon.svg#smartphone"></use>
                   </svg>
                   +38 096 111 11 11</a
                 >
               </li>
+            </ul>
+          </div>
+          <div class="networks">
+            <ul class="networks__list">
+              <li class="networks__item">Instagram</li>
+              <li class="networks__item">Twitter</li>
+              <li class="networks__item">Facebook</li>
+              <li class="networks__item">LinkedIn</li>
             </ul>
           </div>
         </div>
