обновил стили сасс

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
           </div>
           <div class="networks">
             <ul class="networks__list">
-              <li class="networks__item">Instagram</li>
-              <li class="networks__item">Twitter</li>
-              <li class="networks__item">Facebook</li>
-              <li class="networks__item">LinkedIn</li>
+              <li class="networks__item"><a class="networks__link" href="">Instagram</a></li>
+              <li class="networks__item"><a class="networks__link" href="">Twitter</a></li>
+              <li class="networks__item"><a class="networks__link" href="">Facebook</a></li>
+              <li class="networks__item"><a class="networks__link" href="">LinkedIn</a></li>
             </ul>
           </div>
         </div>
