--- a/portfolio.html
+++ b/portfolio.html
@@ -21,31 +21,51 @@
     <header class="page-header">
       <div class="container page-header__container">
         <a href="./index.html" class="page-header__link" lang="en"><span class="page-header__logo page-header__logo--accent">Web</span>Studio</a>
-        <nav class="site-nav__nav">
-          <ul class="site-nav__list">
-            <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студия</a></li>
-            <li class="site-nav__item"><a class="site-nav__link site-nav__link--active" href="./portfolio.html">Портфолио</a></li>
-            <li class="site-nav__item"><a class="site-nav__link" href="#">Контакты</a></li>
-          </ul>
-        </nav>
-        <ul class="contact__list">
-          <li class="contact__item">
-            <a class="contact__link" href="mailto:info@devstudio.com">
-              <svg class="contact__icon" width="16" height="12">
-                <use href="./images/icon.svg#mail"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="contact__item">
-            <a class="contact__link" href="tel:+380961111111">
-              <svg class="contact__icon" width="10" height="16">
-                <use href="./images/icon.svg#smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <button type="button" class="menu__button" data-menu-button>
+          <svg class="menu__icon" width="40" height="40" aria-label="Переключатель мобильного меню">
+            <use class="icon__menu" href="./images/icon.svg#menu"></use>
+            <use class="icon__cross" href="./images/icon.svg#cross"></use>
+          </svg>
+        </button>
+        <div class="menu" data-menu >
+          <div class="navigation">
+            <nav class="site-nav__nav">
+              <ul class="site-nav__list">
+                <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студия</a></li>
+                <li class="site-nav__item"><a class="site-nav__link site-nav__link--active" href="./portfolio.html">Портфолио</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="#">Контакты</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="contact">
+            <ul class="contact__list">
+              <li class="contact__item">
+                <a class="contact__link" href="mailto:info@devstudio.com">
+                  <svg class="contact__icon" width="16" height="12">
+                    <use href="./images/icon.svg#mail"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="contact__item">
+                <a class="contact__link contact__link--active" href="tel:+380961111111">
+                  <svg class="contact__icon" width="10" height="16">
+                    <use href="./images/icon.svg#smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="networks">
+            <ul class="networks__list">
+              <li class="networks__item"><a class="networks__link" href="">Instagram</a></li>
+              <li class="networks__item"><a class="networks__link" href="">Twitter</a></li>
+              <li class="networks__item"><a class="networks__link" href="">Facebook</a></li>
+              <li class="networks__item"><a class="networks__link" href="">LinkedIn</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -67,7 +87,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/notebook.jpg"
                     alt="веб-сайт на экране ноутбука"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -93,7 +113,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/nba-players.jpg"
                     alt=" постер игроков NBA"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -119,7 +139,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/fish.jpg"
                     alt=" логотип приложения морской еды"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -145,7 +165,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/headphones.jpg"
                     alt="наушники"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -171,7 +191,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/boxes.jpg"
                     alt=" коробки"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -197,7 +217,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/mac.jpg"
                     alt="веб-сайтна экране мака"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -223,7 +243,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/book.jpg"
                     alt="книга"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -249,7 +269,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/label.jpg"
                     alt="ярлык"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -275,7 +295,7 @@
                     class="portfolio__img"
                     src="./images/portfolio/website-notebook.jpg"
                     alt="веб-сайт на экране ноутбука"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                   <div class="overlay">
@@ -372,5 +392,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobil-menu.js"></script>
   </body>
 </html>
