--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
     </header>
     <main>
       <section class="gallery">
-        <div class="container">
+        <div class="container gallery__container">
           <h1 class="gallery__title gallery__title--hide">Портфолио</h1>
           <ul class="button__list">
             <li class="button__item"><button class="button" type="button">Все</button></li>
