обновил фоновое изображение

--- a/index.html
+++ b/index.html
@@ -236,13 +236,16 @@
           <ul class="team__lists">
             <li class="team__item">
               <div class="card">
-                <img
+                <div class="card__icon-container">
+                  <img
                   class="card__img"
+                  srcset="./images/team/igor.jpg 1x, ./images/team/igor@2x.jpg 2x"
                   src="./images/team/igor.jpg"
                   alt="Игорь Демьяненко"
                   width="270"
                   height="260"
                 />
+                </div>
                 <div class="card__text-container">
                   <h3 class="card__title">Игорь Демьяненко</h3>
                   <p lang="en" class="card__subtitle">Product Designer</p>
@@ -281,13 +284,15 @@
             </li>
             <li class="team__item">
               <div class="card">
-                <img
+                <div class="card__icon-container">
+                  <img
                   class="card__img"
                   src="./images/team/olga.jpg"
                   alt="Ольга Репина"
                   width="270"
                   height="260"
                 />
+                </div>
                 <div class="card__text-container">
                   <h3 class="card__title">Ольга Репина</h3>
                   <p lang="en" class="card__subtitle">Frontend Developer</p>
@@ -326,13 +331,15 @@
             </li>
             <li class="team__item">
               <div class="card">
-                <img
+                <div class="card__icon-container">
+                  <img
                   class="card__img"
                   src="./images/team/nikolay.jpg"
                   alt="Николай Тарасов"
                   width="270"
                   height="260"
                 />
+                </div>
                 <div class="card__text-container">
                   <h3 class="card__title">Николай Тарасов</h3>
                   <p lang="en" class="card__subtitle">Marketing</p>
@@ -371,13 +378,15 @@
             </li>
             <li class="team__item">
               <div class="card">
-                <img
+                <div class="card__icon-container">
+                  <img
                   class="card__img"
                   src="./images/team/michael.jpg"
                   alt="Михаил Ермаков"
                   width="270"
                   height="260"
                 />
+                </div>
                 <div class="card__text-container">
                   <h3 class="card__title">Михаил Ермаков</h3>
                   <p lang="en" class="card__subtitle">UI Designer</p>
