--- a/portfolio.html
+++ b/portfolio.html
@@ -85,6 +85,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
                     src="./images/portfolio/notebook.jpg"
                     alt="веб-сайт на экране ноутбука"
                     width="450"
@@ -111,6 +112,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
                     src="./images/portfolio/nba-players.jpg"
                     alt=" постер игроков NBA"
                     width="450"
@@ -137,6 +139,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
                     src="./images/portfolio/fish.jpg"
                     alt=" логотип приложения морской еды"
                     width="450"
@@ -163,6 +166,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
                     src="./images/portfolio/headphones.jpg"
                     alt="наушники"
                     width="450"
@@ -189,6 +193,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
                     src="./images/portfolio/boxes.jpg"
                     alt=" коробки"
                     width="450"
@@ -215,6 +220,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
                     src="./images/portfolio/mac.jpg"
                     alt="веб-сайтна экране мака"
                     width="450"
@@ -241,6 +247,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
                     src="./images/portfolio/book.jpg"
                     alt="книга"
                     width="450"
@@ -267,6 +274,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/label.jpg 1x, ./images/portfolio/label@2x.jpg 2x"
                     src="./images/portfolio/label.jpg"
                     alt="ярлык"
                     width="450"
@@ -293,6 +301,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
+                    srcset="./images/portfolio/website-notebook.jpg 1x, ./images/portfolio/website-notebook@2x.jpg 2x"
                     src="./images/portfolio/website-notebook.jpg"
                     alt="веб-сайт на экране ноутбука"
                     width="450"
