--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
   <body>
     <header class="page-header">
       <div class="container page-header__container">
-        <a href="./index.html" class="page-header__link" lang="en"><span class="page-header__logo page-header__logo--accent">Web</span>Studio</a>
+        <a href="./index.html" class="page-header__link" lang="en"
+          ><span class="page-header__logo page-header__logo--accent">Web</span>Studio</a
+        >
         <button type="button" class="menu__button" data-menu-button>
           <svg class="menu__icon" width="40" height="40" aria-label="Переключатель мобильного меню">
             <use class="icon__menu" href="./images/icon.svg#menu"></use>
             <use class="icon__cross" href="./images/icon.svg#cross"></use>
           </svg>
         </button>
-        <div class="menu" data-menu >
+        <div class="menu" data-menu>
           <div class="navigation">
             <nav class="site-nav__nav">
               <ul class="site-nav__list">
-                <li class="site-nav__item"><a class="site-nav__link site-nav__link--active" href="./index.html">Студия</a></li>
-                <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфолио</a></li>
+                <li class="site-nav__item">
+                  <a class="site-nav__link site-nav__link--active" href="./index.html">Студия</a>
+                </li>
+                <li class="site-nav__item">
+                  <a class="site-nav__link" href="./portfolio.html">Портфолио</a>
+                </li>
                 <li class="site-nav__item"><a class="site-nav__link" href="#">Контакты</a></li>
               </ul>
             </nav>
@@ -78,7 +84,7 @@
                   <li class="form__item">
                     <label class="form__label">
                       <span class="form__text">Имя</span>
-                      <input class="form__input" type="text" name="name" autofocus>
+                      <input class="form__input" type="text" name="name" autofocus />
                       <svg class="form__icon" width="18" height="18">
                         <use href="./images/icon.svg#person"></use>
                       </svg>
@@ -87,7 +93,7 @@
                   <li class="form__item">
                     <label class="form__label">
                       <span class="form__text">Телефон</span>
-                      <input class="form__input" type="tel" name="phone number">
+                      <input class="form__input" type="tel" name="phone number" />
                       <svg class="form__icon" width="18" height="18">
                         <use href="./images/icon.svg#phone"></use>
                       </svg>
@@ -96,7 +102,7 @@
                   <li class="form__item">
                     <label class="form__label">
                       <span class="form__text">Почта</span>
-                      <input class="form__input" type="email" name="email">
+                      <input class="form__input" type="email" name="email" />
                       <svg class="form__icon" width="18" height="18">
                         <use href="./images/icon.svg#modal-mail"></use>
                       </svg>
@@ -105,23 +111,33 @@
                   <li class="form__item">
                     <label class="form__label">
                       <span class="form__text">Комментарий</span>
-                      <textarea name="comment" rows="6" placeholder="Введите текст" class="form__textarea"></textarea>
+                      <textarea
+                        name="comment"
+                        rows="6"
+                        placeholder="Введите текст"
+                        class="form__textarea"
+                      ></textarea>
                     </label>
                   </li>
                   <li class="form__item">
                     <label class="form__label form__checkbox">
-                    <input class="form__checkbox-input" type="checkbox" name="checkbox">
-                    <span class="form__checkbox-icon">
-                      <svg class="form__check-icon" width="16" height="15">
-                        <use href="./images/icon.svg#check"></use>
-                      </svg>
-                    </span>
-                    <span class="form__text-checkbox">Соглашаюсь с рассылкой и принимаю <span class="form__text-checkbox form__text-checkbox--accent">Условия договора</span></span>
-                  </label>
-                </li>
-                <li class="form__item">
-                  <button class="form__submit-button" type="submit">Отправить</button>
-                </li>
+                      <input class="form__checkbox-input" type="checkbox" name="checkbox" />
+                      <span class="form__checkbox-icon">
+                        <svg class="form__check-icon" width="16" height="15">
+                          <use href="./images/icon.svg#check"></use>
+                        </svg>
+                      </span>
+                      <span class="form__text-checkbox"
+                        >Соглашаюсь с рассылкой и принимаю
+                        <span class="form__text-checkbox form__text-checkbox--accent"
+                          >Условия договора</span
+                        ></span
+                      >
+                    </label>
+                  </li>
+                  <li class="form__item">
+                    <button class="form__submit-button" type="submit">Отправить</button>
+                  </li>
                 </ul>
               </form>
               <button type="button" class="modal__close-button" data-modal-close>
@@ -193,6 +209,7 @@
             <li class="work__item">
               <img
                 class="work__image"
+                srcset="./images/second-section/code.jpg 1x, ./images/second-section/code@2x.jpg 2x"
                 src="./images/second-section/code.jpg"
                 alt="Работа с кодом "
                 width="370"
@@ -205,6 +222,7 @@
             <li class="work__item">
               <img
                 class="work__image"
+                srcset="./images/second-section/design.jpg 1x, ./images/second-section/design@2x.jpg 2x"
                 src="./images/second-section/design.jpg"
                 alt="Выбор дизайна на ноутбуке"
                 width="370"
@@ -217,6 +235,7 @@
             <li class="work__item">
               <img
                 class="work__image"
+                srcset="./images/second-section/color.jpg 1x, ./images/second-section/color@2x.jpg 2x"
                 src="./images/second-section/color.jpg"
                 alt="Выбор цвета на планшете"
                 width="370"
@@ -238,13 +257,13 @@
               <div class="card">
                 <div class="card__icon-container">
                   <img
-                  class="card__img"
-                  srcset="./images/team/igor.jpg 1x, ./images/team/igor@2x.jpg 2x"
-                  src="./images/team/igor.jpg"
-                  alt="Игорь Демьяненко"
-                  width="270"
-                  height="260"
-                />
+                    class="card__img"
+                    srcset="./images/team/igor.jpg 1x, ./images/team/igor@2x.jpg 2x"
+                    src="./images/team/igor.jpg"
+                    alt="Игорь Демьяненко"
+                    width="270"
+                    height="260"
+                  />
                 </div>
                 <div class="card__text-container">
                   <h3 class="card__title">Игорь Демьяненко</h3>
@@ -286,12 +305,13 @@
               <div class="card">
                 <div class="card__icon-container">
                   <img
-                  class="card__img"
-                  src="./images/team/olga.jpg"
-                  alt="Ольга Репина"
-                  width="270"
-                  height="260"
-                />
+                    class="card__img"
+                    srcset="./images/team/olga.jpg 1x, ./images/team/olga@2x.jpg 2x"
+                    src="./images/team/olga.jpg"
+                    alt="Ольга Репина"
+                    width="270"
+                    height="260"
+                  />
                 </div>
                 <div class="card__text-container">
                   <h3 class="card__title">Ольга Репина</h3>
@@ -333,12 +353,13 @@
               <div class="card">
                 <div class="card__icon-container">
                   <img
-                  class="card__img"
-                  src="./images/team/nikolay.jpg"
-                  alt="Николай Тарасов"
-                  width="270"
-                  height="260"
-                />
+                    class="card__img"
+                    srcset="./images/team/nikolay.jpg 1x, ./images/team/nikolay@2x.jpg 2x"
+                    src="./images/team/nikolay.jpg"
+                    alt="Николай Тарасов"
+                    width="270"
+                    height="260"
+                  />
                 </div>
                 <div class="card__text-container">
                   <h3 class="card__title">Николай Тарасов</h3>
@@ -380,12 +401,13 @@
               <div class="card">
                 <div class="card__icon-container">
                   <img
-                  class="card__img"
-                  src="./images/team/michael.jpg"
-                  alt="Михаил Ермаков"
-                  width="270"
-                  height="260"
-                />
+                    class="card__img"
+                    srcset="./images/team/michael.jpg 1x, ./images/team/michael@2x.jpg 2x"
+                    src="./images/team/michael.jpg"
+                    alt="Михаил Ермаков"
+                    width="270"
+                    height="260"
+                  />
                 </div>
                 <div class="card__text-container">
                   <h3 class="card__title">Михаил Ермаков</h3>
@@ -426,7 +448,7 @@
           </ul>
         </div>
       </section>
-      <section class=" companies">
+      <section class="companies">
         <div class="container">
           <h2 class="companies__title">Постоянные клиенты</h2>
           <ul class="companies__list">
@@ -539,9 +561,10 @@
           <b class="subs__text">Подпишитесь на рассылку</b>
           <form class="subs__form">
             <label class="subs__label">
-              <input class="subs__input" type="email" placeholder="E-mail">
+              <input class="subs__input" type="email" placeholder="E-mail" />
             </label>
-            <button class="subs__button" type="submit">Подписаться
+            <button class="subs__button" type="submit">
+              Подписаться
               <svg class="subs__icon" width="24" height="24">
                 <use href="./images/icon.svg#send"></use>
               </svg>
