--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
             <ul class="contact__list">
               <li class="contact__item">
                 <a class="contact__link" href="mailto:info@devstudio.com">
-                  <svg class="contact__icon" width="16" height="12">
+                  <svg class="contact__icon" width="14" height="10">
                     <use href="./images/icon.svg#mail"></use>
                   </svg>
                   info@devstudio.com</a
@@ -49,7 +49,7 @@
               </li>
               <li class="contact__item">
                 <a class="contact__link contact__link--active" href="tel:+380961111111">
-                  <svg class="contact__icon" width="10" height="16">
+                  <svg class="contact__icon" width="10" height="14">
                     <use href="./images/icon.svg#smartphone"></use>
                   </svg>
                   +38 096 111 11 11</a
@@ -112,7 +112,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
+                    srcset="./images/portfolio/nba-players.jpg 1x, ./images/portfolio/nba-players@2x.jpg 2x"
                     src="./images/portfolio/nba-players.jpg"
                     alt=" постер игроков NBA"
                     width="450"
@@ -139,7 +139,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
+                    srcset="./images/portfolio/fish.jpg 1x, ./images/portfolio/fish@2x.jpg 2x"
                     src="./images/portfolio/fish.jpg"
                     alt=" логотип приложения морской еды"
                     width="450"
@@ -166,7 +166,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
+                    srcset="./images/portfolio/headphones.jpg 1x, ./images/portfolio/headphones@2x.jpg 2x"
                     src="./images/portfolio/headphones.jpg"
                     alt="наушники"
                     width="450"
@@ -193,7 +193,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
+                    srcset="./images/portfolio/boxes.jpg 1x, ./images/portfolio/boxes@2x.jpg 2x"
                     src="./images/portfolio/boxes.jpg"
                     alt=" коробки"
                     width="450"
@@ -220,7 +220,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
+                    srcset="./images/portfolio/mac.jpg 1x, ./images/portfolio/mac@2x.jpg 2x"
                     src="./images/portfolio/mac.jpg"
                     alt="веб-сайтна экране мака"
                     width="450"
@@ -247,7 +247,7 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
+                    srcset="./images/portfolio/book.jpg 1x, ./images/portfolio/book@2x.jpg 2x"
                     src="./images/portfolio/book.jpg"
                     alt="книга"
                     width="450"
