--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,10 @@
             <ul class="contact__list">
               <li class="contact__item">
                 <a class="contact__link" href="mailto:info@devstudio.com">
-                  <svg class="contact__icon" width="14" height="10">
+                  <svg class="contact__icon contact__icon--tablet" width="14" height="10">
+                    <use href="./images/icon.svg#mail"></use>
+                  </svg>
+                  <svg class="contact__icon contact__icon--desktop" width="16" height="12" >
                     <use href="./images/icon.svg#mail"></use>
                   </svg>
                   info@devstudio.com</a
@@ -49,7 +52,10 @@
               </li>
               <li class="contact__item">
                 <a class="contact__link contact__link--active" href="tel:+380961111111">
-                  <svg class="contact__icon" width="10" height="14">
+                  <svg class="contact__icon contact__icon--tablet" width="10" height="14">
+                    <use href="./images/icon.svg#smartphone"></use>
+                  </svg>
+                  <svg class="contact__icon contact__icon--desktop" width="10" height="16" >
                     <use href="./images/icon.svg#smartphone"></use>
                   </svg>
                   +38 096 111 11 11</a
