--- a/portfolio.html
+++ b/portfolio.html
@@ -91,8 +91,9 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/notebook.jpg 1x, ./images/portfolio/notebook@2x.jpg 2x"
-                    src="./images/portfolio/notebook.jpg"
+                    srcset="./images/portfolio/notebook-354w.jpg 354w, ./images/portfolio/notebook-370w.jpg 370w, ./images/portfolio/notebook-450w.jpg 450w, ./images/portfolio/notebook-708w.jpg 708w, ./images/portfolio/notebook-740w.jpg 740w, ./images/portfolio/notebook-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/portfolio/notebook-450w.jpg"
                     alt="веб-сайт на экране ноутбука"
                     width="450"
                     height="294"
@@ -118,7 +119,8 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/nba-players.jpg 1x, ./images/portfolio/nba-players@2x.jpg 2x"
+                    srcset="./images/portfolio/nba-players-354w.jpg 354w, ./images/portfolio/nba-players-370w.jpg 370w, ./images/portfolio/nba-players-450w.jpg 450w, ./images/portfolio/nba-players-708w.jpg 708w, ./images/portfolio/nba-players-740w.jpg 740w, ./images/portfolio/nba-players-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
                     src="./images/portfolio/nba-players.jpg"
                     alt=" постер игроков NBA"
                     width="450"
@@ -145,7 +147,8 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/fish.jpg 1x, ./images/portfolio/fish@2x.jpg 2x"
+                    srcset="./images/portfolio/fish-354w.jpg 354w, ./images/portfolio/fish-370w.jpg 370w, ./images/portfolio/fish-450w.jpg 450w, ./images/portfolio/fish-708w.jpg 708w, ./images/portfolio/fish-740w.jpg 740w, ./images/portfolio/fish-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
                     src="./images/portfolio/fish.jpg"
                     alt=" логотип приложения морской еды"
                     width="450"
@@ -172,7 +175,8 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/headphones.jpg 1x, ./images/portfolio/headphones@2x.jpg 2x"
+                    srcset="./images/portfolio/headphones-354w.jpg 354w, ./images/portfolio/headphones-370w.jpg 370w, ./images/portfolio/headphones-450w.jpg 450w, ./images/portfolio/headphones-708w.jpg 708w, ./images/portfolio/headphones-740w.jpg 740w, ./images/portfolio/headphones-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
                     src="./images/portfolio/headphones.jpg"
                     alt="наушники"
                     width="450"
@@ -199,7 +203,8 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/boxes.jpg 1x, ./images/portfolio/boxes@2x.jpg 2x"
+                    srcset="./images/portfolio/boxes-354w.jpg 354w, ./images/portfolio/boxes-370w.jpg 370w, ./images/portfolio/boxes-450w.jpg 450w, ./images/portfolio/boxes-708w.jpg 708w, ./images/portfolio/boxes-740w.jpg 740w, ./images/portfolio/boxes-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
                     src="./images/portfolio/boxes.jpg"
                     alt=" коробки"
                     width="450"
@@ -226,7 +231,8 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/mac.jpg 1x, ./images/portfolio/mac@2x.jpg 2x"
+                    srcset="./images/portfolio/mac-354w.jpg 354w, ./images/portfolio/mac-370w.jpg 370w, ./images/portfolio/mac-450w.jpg 450w, ./images/portfolio/mac-708w.jpg 708w, ./images/portfolio/mac-740w.jpg 740w, ./images/portfolio/mac-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
                     src="./images/portfolio/mac.jpg"
                     alt="веб-сайтна экране мака"
                     width="450"
@@ -253,7 +259,8 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/book.jpg 1x, ./images/portfolio/book@2x.jpg 2x"
+                    srcset="./images/portfolio/book-354w.jpg 354w, ./images/portfolio/book-370w.jpg 370w, ./images/portfolio/book-450w.jpg 450w, ./images/portfolio/book-708w.jpg 708w, ./images/portfolio/book-740w.jpg 740w, ./images/portfolio/book-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
                     src="./images/portfolio/book.jpg"
                     alt="книга"
                     width="450"
@@ -280,7 +287,8 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/label.jpg 1x, ./images/portfolio/label@2x.jpg 2x"
+                    srcset="./images/portfolio/label-354w.jpg 354w, ./images/portfolio/label-370w.jpg 370w, ./images/portfolio/label-450w.jpg 450w, ./images/portfolio/label-708w.jpg 708w, ./images/portfolio/label-740w.jpg 740w, ./images/portfolio/label-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
                     src="./images/portfolio/label.jpg"
                     alt="ярлык"
                     width="450"
@@ -307,7 +315,8 @@
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
-                    srcset="./images/portfolio/website-notebook.jpg 1x, ./images/portfolio/website-notebook@2x.jpg 2x"
+                    srcset="./images/portfolio/website-notebook-354w.jpg 354w, ./images/portfolio/website-notebook-370w.jpg 370w, ./images/portfolio/website-notebook-450w.jpg 450w, ./images/portfolio/website-notebook-708w.jpg 708w, ./images/portfolio/website-notebook-740w.jpg 740w, ./images/portfolio/website-notebook-900w.jpg 900w"
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/website-notebook.jpg"
                     alt="веб-сайт на экране ноутбука"
                     width="450"
