--- a/index.html
+++ b/index.html
@@ -264,11 +264,12 @@
                 <div class="card__icon-container">
                   <img
                     class="card__img"
-                    srcset="./images/team/igor.jpg 1x, ./images/team/igor@2x.jpg 2x"
+                    srcset="./images/team/igor-desktop.jpg 270w, ./images/team/igor-tablet.jpg 354w, ./images/team/igor.jpg 450w, ./images/team/igor-desktop@2x.jpg 540w, ./images/team/igor-tablet@2x.jpg 708w ./images/team/igor@2x.jpg 900w"
+                    sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/team/igor.jpg"
                     alt="Игорь Демьяненко"
                     width="270"
-                    height="260"
+                    height="260" 
                   />
                 </div>
                 <div class="card__text-container">
@@ -312,7 +313,8 @@
                 <div class="card__icon-container">
                   <img
                     class="card__img"
-                    srcset="./images/team/olga.jpg 1x, ./images/team/olga@2x.jpg 2x"
+                    srcset="./images/team/olga-desktop.jpg 270w, ./images/team/olga-tablet.jpg 354w, ./images/team/olga.jpg 450w, ./images/team/olga-desktop@2x.jpg 540w, ./images/team/olga-tablet@2x.jpg 708w ./images/team/olga@2x.jpg 900w"
+                    sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/team/olga.jpg"
                     alt="Ольга Репина"
                     width="270"
@@ -360,7 +362,8 @@
                 <div class="card__icon-container">
                   <img
                     class="card__img"
-                    srcset="./images/team/nikolay.jpg 1x, ./images/team/nikolay@2x.jpg 2x"
+                    srcset="./images/team/nikolay-desktop.jpg 270w, ./images/team/nikolay-tablet.jpg 354w, ./images/team/nikolay.jpg 450w, ./images/team/nikolay-desktop@2x.jpg 540w, ./images/team/nikolay-tablet@2x.jpg 708w ./images/team/nikolay@2x.jpg 900w"
+                    sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/team/nikolay.jpg"
                     alt="Николай Тарасов"
                     width="270"
@@ -408,7 +411,8 @@
                 <div class="card__icon-container">
                   <img
                     class="card__img"
-                    srcset="./images/team/michael.jpg 1x, ./images/team/michael@2x.jpg 2x"
+                    srcset="./images/team/michael-desktop.jpg 270w, ./images/team/michael-tablet.jpg 354w, ./images/team/michael.jpg 450w, ./images/team/michael-desktop@2x.jpg 540w, ./images/team/michael-tablet@2x.jpg 708w ./images/team/michael@2x.jpg 900w"
+                    sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/team/michael.jpg"
                     alt="Михаил Ермаков"
                     width="270"
