--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           </div>
           <div class="networks">
             <ul class="networks__list">
-              <li class="networks__item"><a class="networks__link" href="##">Instagram</a></li>
-              <li class="networks__item"><a class="networks__link" href="##">Twitter</a></li>
-              <li class="networks__item"><a class="networks__link" href="##">Facebook</a></li>
-              <li class="networks__item"><a class="networks__link" href="##">LinkedIn</a></li>
+              <li class="networks__item"><a class="networks__link" href="#">Instagram</a></li>
+              <li class="networks__item"><a class="networks__link" href="#">Twitter</a></li>
+              <li class="networks__item"><a class="networks__link" href="#">Facebook</a></li>
+              <li class="networks__item"><a class="networks__link" href="#">LinkedIn</a></li>
             </ul>
           </div>
         </div>
@@ -264,8 +264,8 @@
                 <div class="card__icon-container">
                   <img
                     class="card__img"
-                    srcset="./images/team/igor-desktop.jpg 270w, ./images/team/igor-tablet.jpg 354w, ./images/team/igor.jpg 450w, ./images/team/igor-desktop@2x.jpg 540w, ./images/team/igor-tablet@2x.jpg 708w ./images/team/igor@2x.jpg 900w"
-                    sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    srcset="./images/team/igor-desktop-270w.jpg 270w, ./images/team/igor-tablet-354w.jpg 354w, ./images/team/igor-450w.jpg 450w, ./images/team/igor-desktop-540w.jpg 540w, ./images/team/igor-tablet-708w.jpg 708w, ./images/team/igor-900w.jpg 900w"
+                    sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw "
                     src="./images/team/igor.jpg"
                     alt="Игорь Демьяненко"
                     width="270"
@@ -313,7 +313,7 @@
                 <div class="card__icon-container">
                   <img
                     class="card__img"
-                    srcset="./images/team/olga-desktop.jpg 270w, ./images/team/olga-tablet.jpg 354w, ./images/team/olga.jpg 450w, ./images/team/olga-desktop@2x.jpg 540w, ./images/team/olga-tablet@2x.jpg 708w ./images/team/olga@2x.jpg 900w"
+                    srcset="./images/team/olga-desktop-270w.jpg 270w, ./images/team/olga-tablet-354w.jpg 354w, ./images/team/olga-450w.jpg 450w, ./images/team/olga-desktop-540w.jpg 540w, ./images/team/olga-tablet-708w.jpg 708w, ./images/team/olga-900w.jpg 900w"
                     sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/team/olga.jpg"
                     alt="Ольга Репина"
@@ -362,7 +362,7 @@
                 <div class="card__icon-container">
                   <img
                     class="card__img"
-                    srcset="./images/team/nikolay-desktop.jpg 270w, ./images/team/nikolay-tablet.jpg 354w, ./images/team/nikolay.jpg 450w, ./images/team/nikolay-desktop@2x.jpg 540w, ./images/team/nikolay-tablet@2x.jpg 708w ./images/team/nikolay@2x.jpg 900w"
+                    srcset="./images/team/nikolay-desktop-270w.jpg 270w, ./images/team/nikolay-tablet-354w.jpg 354w, ./images/team/nikolay-450w.jpg 450w, ./images/team/nikolay-desktop-540w.jpg 540w, ./images/team/nikolay-tablet-708w.jpg 708w, ./images/team/nikolay-900w.jpg 900w"
                     sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/team/nikolay.jpg"
                     alt="Николай Тарасов"
@@ -411,7 +411,7 @@
                 <div class="card__icon-container">
                   <img
                     class="card__img"
-                    srcset="./images/team/michael-desktop.jpg 270w, ./images/team/michael-tablet.jpg 354w, ./images/team/michael.jpg 450w, ./images/team/michael-desktop@2x.jpg 540w, ./images/team/michael-tablet@2x.jpg 708w ./images/team/michael@2x.jpg 900w"
+                    srcset="./images/team/michael-desktop-270w.jpg 270w, ./images/team/michael-tablet-354w.jpg 354w, ./images/team/michael-450w.jpg 450w, ./images/team/michael-desktop-540w.jpg 540w, ./images/team/michael-tablet-708w.jpg 708w, ./images/team/michael-900w.jpg 900w"
                     sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/team/michael.jpg"
                     alt="Михаил Ермаков"
